src/css/main.css
@font-face {
  font-family: 'Adwaita Sans';
  src: url('/assets/fonts/AdwaitaSans-Regular.ttf');
}

:root {
  --text-color: black;
  --background-color: white;
  --yambo-red: #de0016;
  --yambo-blue: #0227bd;
  --yambo-brown: #d3a55f;
  --yambo-light-brown: #f5eada;
  --yambo-dark-brown: #37270f;
  --yambo-dark-blue: #0e1985;
}
/* --------------- */
/*  BASE ELEMENTS  */
/* --------------- */
html {
  font-family: 'Adwaita Sans', sans-serif;
}
body {
  background-color: var(--background-color);
  color: var(--text-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  justify-content: space-between;
  padding: 1rem 0;
}
#main-container {
  width: 100%;
  padding: 0 1rem;
}
a {
  color: var(--yambo-blue);
}
a:not(.active):hover {
  background-color: var(--yambo-brown);
}
a.active {
  color: var(--yambo-red);
  font-weight: bold;
}
main {
  width: 100%;
}
img {
  border: 1px solid var(--text-color);
}
hr {
  width: 100%;
  border: 0;
  border-bottom: 1px solid var(--text-color);
}

/* --------------- */
/*    NAVIGATION   */
/* --------------- */
nav ul {
  display: flex;
  justify-content: space-between;
  margin: 0 0 1rem 0;
  padding: 0;
}
nav ul li {
  display: inline-block;
}
nav ul li a {
  display: inline-block;
  color: var(--text-color);
}
nav ul li a:hover {
  transform: scale(1, 3);
  transform-origin: 0 50%;
}

/* --------------- */
/*      FOOTER     */
/* --------------- */
footer {
  margin-top: 2rem;
}
footer img {
  border: none;
  width: 48px;
  height: auto;
  aspect-ratio: 1 / 1;
  opacity: 10%;
}

/* --------------- */
/*      HOME       */
/* --------------- */
main.index {
  display: flex;
  flex-direction: column;
}
main.index div#home-image-container {
  position: relative;
  height: 300px;
}
main.index div#home-image-container p {
  display: inline-block;
  position: absolute;
  transform: scale(1.4, 1);
  transform-origin: 100% 0%;
  bottom: 0px;
  right: 1rem;
  color: white;
}
main.index div#home-image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
main.index details {
  margin-top: 1rem;
}
/*main.index details[open]::details-content {
  border: 1px solid black;
  padding: 0.5rem;
}*/
main.index summary {
  background-color: var(--yambo-brown);
  width: fit-content;
  color: white;
  transform: scale(2, 1);
  transform-origin: 0 0;
  cursor: pointer;
  margin: 0;
}
main.index article.fecha {
  border: 1px solid black;
  padding: 0.5rem;
  background-color: white;
  color: black;
  text-align: center;
}
main.index article.fecha div {
  display: flex;
  justify-content: space-between;
}
main.index article.fecha p {
  margin: 0;
}
main.index article.fecha p.title {
  text-transform: uppercase;
}
main.index article.fecha p.details {
  font-size: 0.7em;
  width: 100%;
  text-align: right;
}
main.index article.fecha a {
  margin-top: 0.5rem;
  background-color: var(--yambo-blue);
  color: white;
  transform: scale(1.5, 1);
  display: inline-block;
}
main.index section > h2 {
  margin: 1rem 0 0.5rem 0;
  font-size: 1rem;
  transform: scale(2, 1);
  transform-origin: 0 0;
  color: var(--yambo-blue);
  font-weight: normal;
  width: fit-content;
}
/* --------------- */
/*      BLOG       */
/* --------------- */
main.blog {
  display: grid;
  gap: 1rem;
}
article.post p {
  margin: 0;
}
article.post h2 {
  /* Título del post */
  font-size: 1em;
  margin: 0;
  background: var(--yambo-red);
  color: white;
  display: inline;
}
article.post {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
article.post div.post-info {
  display: flex;
  margin-top: 0.75rem;
}
article.post div.post-info a {
  display: inline-block;
  justify-self: end;
  height: min-content;
  transform: scale(1, 2);
  transform-origin: 0% 10%;
  flex-shrink: 0;
  color: var(--yambo-blue);
  text-decoration: none;
  margin-left: auto;
}
article.post div.post-info a::before {
  content: '[ ';
}
article.post div.post-info a::after {
  content: ' -> ]';
}
article.post > img {
  /* Header image */
  height: 7rem;
  object-fit: cover;
  width: auto;
}
article.post div.author-info {
  display: flex;
  margin-left: auto;
}
article.post img.author-image {
  border: none;
  width: auto;
  height: 37px;
  margin-right: 0.25rem;
}
article.post div.author-info img.author-image {
  margin-right: 0;
}
article.post div.author-info p {
  align-self: end;
}
/* Contenido del post */
article.post section p {
  margin-top: 1.5rem;
  text-align: justify;
  line-height: 1.5;
}
article.post section img {
  width: 100%;
  height: auto;
}
article.post section a {
  display: inline-block;
  color: var(--yambo-blue);
}
article.post section a:hover {
  color: white;
  transform: scale(2, 1.5);
  transform-origin: 0% 10%;
}
article.post section a:hover::before {
  content: '[ ';
}
article.post section a:hover::after {
  content: ' -> ]';
}

article.post div.blockquote {
  background-color: var(--yambo-light-brown);
  padding: 1.5rem;
  margin: 2rem 2rem 2.5rem 2rem;
  position: relative;
}
article.post div.blockquote blockquote {
  text-align: justify;
  font-style: italic;
  margin: 0;
  line-height: 1.5;
  color: var(--yambo-dark-brown);
}
article.post div.blockquote div {
  justify-content: end;
  align-items: center;
  display: flex;
  position: absolute;
  right: -2rem;
  background-color: white;
  border: 1px solid black;
  padding: 0.5rem;
}
article.post div.blockquote img {
  border: none;
  width: auto;
  height: 36px;
}
article.post div.blockquote span {
  font-size: 1.75rem;
  margin-right: -0.5rem;
}
/* --------------- */
/*     ENLACES     */
/* --------------- */
main.enlaces {
  position: relative;
}
main.enlaces img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  object-position: bottom;
}
main.enlaces ul {
  margin: 0;
  padding: 1rem 1rem 3rem 1rem;
  list-style: none;
  position: absolute;
  top: 0;
  width: 100%;
}
main.enlaces ul li a {
  display: inline-block;
  transform: scale(1, 2);
  transform-origin: 0% 10%;
  color: white;
  background-color: var(--yambo-blue);
}
main.enlaces ul li a:hover {
  transform: scale(3, 2);
}
main.enlaces ul li:nth-child(2) {
  margin-left: 18%;
  margin-top: 28px;
}
main.enlaces ul li:nth-child(3) {
  margin-left: 30%;
  margin-top: 28px;
}
main.enlaces ul li:nth-child(4) {
  margin-left: 45%;
  margin-top: 28px;
}
main.enlaces ul li:nth-child(5) {
  margin-left: 60%;
  margin-top: 28px;
}
main.enlaces ul li:nth-child(6) {
  margin-left: 82%;
  margin-top: 28px;
}

/* --------------- */
/*      MÚSICA     */
/* --------------- */
main.musica {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
main.musica p {
  margin: 0;
  font-size: 0.8em;
}
main.musica section {
  border: 1px solid var(--text-color);
  width: 100%;
  height: min-content;
}
main.musica section div {
  padding: 0.5rem;
}
main.musica section img {
  width: 100%;
  height: auto;
  object-fit: cover;
  border: none;
  border-bottom: 1px solid var(--text-color);
  aspect-ratio: 1 / 1;
}
main.musica section h2 {
  font-size: 1em;
  margin: 0;
  background: var(--yambo-red);
  color: white;
  display: inline;
}
main.musica section ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
main.musica section ul li a::before {
  content: '[ ';
}
main.musica section ul li a::after {
  content: ' -> ]';
}
main.musica section ul li a {
  display: inline-block;
  color: var(--yambo-blue);
  transform: scale(1.4, 1);
  transform-origin: 0 0;
}
/* --------------- */
/*      FECHAS     */
/* --------------- */

main.fechas {
  padding-bottom: 10rem;
}
main.fechas h2 {
  width: fit-content;
  background-color: var(--yambo-red);
  color: white;
  font-size: 1em;
}
main.fechas section.proximas {
  background-image: url('/assets/pictures/tshirt.png');
  background-size: 145%;
  background-position: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 3rem 0;
  aspect-ratio: 1 / 1;
}
main.fechas section.proximas img {
  width: 70%;
  height: auto;
  border: none;
  margin-top: 3rem;
}
main.fechas section.proximas > div {
  width: 100%;
  max-width: 76%;
}
main.fechas section.proximas article {
  color: white;
  text-align: center;
  margin-bottom: 1.5rem;
}
main.fechas section.proximas article div {
  display: flex;
  justify-content: space-between;
}
main.fechas section.proximas article p {
  margin: 0;
  flex-shrink: 0;
}
main.fechas section.proximas article p.title {
  text-transform: uppercase;
}
main.fechas section.proximas article p.details {
  font-size: 0.7em;
  width: 100%;
  text-align: right;
}
main.fechas section.proximas a {
  margin-top: 0.5rem;
  background-color: var(--yambo-blue);
  color: white;
  transform: scale(1.5, 1);
  display: inline-block;
}
main.fechas section.anteriores {
  margin-top: 1rem;
}
main.fechas section.anteriores ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
main.fechas section.anteriores ul li {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.5rem 0;
  margin: 0;
}
main.fechas section.anteriores ul li p {
  margin: 0;
}
main.fechas section.anteriores ul li p:first-of-type {
  color: white;
  background-color: var(--yambo-brown);
  transform: scale(3.48, 1);
  transform-origin: 0%;
  width: min-content;
}
main.fechas div#floating-image-container {
  display: none;
  width: 192px;
  height: auto;
  position: fixed;
  pointer-events: none;
}
main.fechas div#floating-image-container img {
  width: 100%;
  height: auto;
}
/* --------------- */
/*     REGALOS     */
/* --------------- */
main.regalos {
  border: 1px solid var(--text-color);
  padding: 1rem;
  text-align: center;
}
main.regalos input {
  width: 256px;
  padding: 0.25rem;
  border: 1px solid var(--text-color);
  background-color: black;
  color: white;
}
main.regalos label {
  font-weight: bold;
}
main.regalos p {
  font-size: 0.8rem;
}
@media (width >= 48rem) {
  body {
    justify-content: center;
  }
  #main-container {
    max-width: 640px;
  }
  main.index div#home-image-container img {
    object-position: center -200px;
  }
  main.index div#home-image-container p {
    transform: scale(2, 1);
  }
  main.musica {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  main.fechas section.proximas {
    background-size: cover;
    padding-bottom: 2rem;
    aspect-ratio: 1.2 / 1;
  }
  main.fechas section.proximas > div {
    max-width: 50%;
  }
  main.fechas section.proximas img {
    margin-top: 7rem;
    width: 256px;
  }
  main.fechas section.anteriores ul li {
    flex-direction: row;
  }
  main.enlaces ul li:nth-child(1) {
    margin-left: 0%;
  }
  main.enlaces ul li:nth-child(2) {
    margin-left: 18%;
  }
  main.enlaces ul li:nth-child(3) {
    margin-left: 32%;
  }
  main.enlaces ul li:nth-child(4) {
    margin-left: 51%;
  }
  main.enlaces ul li:nth-child(5) {
    margin-left: 69%;
  }
  main.enlaces ul li:nth-child(6) {
    margin-left: 89%;
  }
}

